# Submarine

./: .gitignore  CMakeLists.txt  gitConfig.py
Base/: CMakeLists.txt  Info.hpp.in  QtHelper.hpp  SocketBase.hpp
Base/include/: CMakeLists.txt  UdpProtocol.hpp
Base/rcc/: CMakeLists.txt
Base/src/: CMakeLists.txt  UdpProtocol.cpp
Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.qml  Socket.cpp  Socket.hpp  main.cpp  winResources.rc
Client/include/: CMakeLists.txt
Client/rcc/: Application.qrc  CMakeLists.txt  MainWindow.qml
Client/src/: CMakeLists.txt  MainWindow.cpp
Server/: CMakeLists.txt  Socket.cpp  Socket.hpp  main.cpp
Server/rcc/: CMakeLists.txt  xd.qrc
Server/src/: CMakeLists.txt  main.cpp
